# servemd

./: .cursorrules  .dockerignore  CHANGELOG.md  DOCKER_README.md  Dockerfile  README.md  SPECS.md  USAGE.md  docker-build-push.sh  docker-build.sh  docker-run.sh  pyproject.toml
.cursor/commands/: ask.md  fix.md  go.md  start.md
.github/: RELEASE_WORKFLOW.md
.github/workflows/: ci.yml  dependency-check.yml  publish-docker.yml  publish-pypi.yml  security.yml
deployment/hetzner/: .env.example  Caddyfile  README.md  (+2 more)
docs/: configuration.md  index.md  sidebar.md  topbar.md
examples/: Dockerfile.custom-docs  Dockerfile.user-template  README.md  custom.css  deployment-checklist.md  docker-compose.user.yml  k8s-simple.yaml  night-mode.css  serve-docs-local.sh
specs/: TODO.md  TODO_7_powered_by_servemd.md  TODO_8_custom_css_injection.md  TODO_9_copy_page_ai_links.md  TODO_IMPROVE_SEARCH.md  TODO_KLO-706_mobile-search.md  TODO_MCP.md  TODO_mcp_install_ux.md  TODO_search_topbar.md  mcp-cache-invalidation.md  mcp-indexing-advanced.md  mcp-indexing-strategy.md  mcp-specification.md  mcp-whoosh-strategy.md
tests/: test_caching.py  test_config.py  test_copy_page.py  test_custom_css.py  test_helpers.py  test_html_embed.py  test_html_embed_fix.py  test_llms_endpoints.py  test_llms_implementation.py  test_llms_service.py  test_main.py  test_markdown_service.py  test_mcp_indexer.py  test_mcp_integration.py  test_mcp_search.py  test_mcp_tools.py  test_proxy_headers.py  test_search_anchors.py  test_search_highlighting.py  test_search_route.py  test_templates.py
(+21 files in other folders)
